work in progress

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -22,7 +22,7 @@
     </header>
 
     <article class="aboutme_article">
-        <div>
+        <div class= ph_aboutme>
             <img src="../images/sobremimpic.png" alt="Fotografia de Raiza" class="aboutme_foto">
         </div>
 
