--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -41,9 +41,20 @@
 
     <main class="alvoroca_main">
         <div class="card">
-            <div class="card_image">
-                <img src="../images/l0.png" alt="" class="card_images">
+            <!-- card imagine div not necessary, delete -->
+            <img src="../images/l0.png" alt="" class="card_images">
+            <div class="card_body">
+                <h3 class="card_title">
+                    Caderno de folha lisa.
+                </h3>
+                <p class="card_description">
+                    Livro capa dura.
+                </p>
             </div>
+        </div>
+
+        <div class="card">        
+            <img src="../images/l4.png" alt="" class="card_images">            
             <div class="card_body">
                 <h3 class="card_title">
                     Caderno de folha lisa.
@@ -55,9 +66,7 @@
         </div>
 
         <div class="card">
-            <div class="card_image">
-                <img src="../images/l4.png" alt="" class="card_images">
-            </div>
+            <img src="../images/l1.png" alt="" class="card_images">
             <div class="card_body">
                 <h3 class="card_title">
                     Caderno de folha lisa.
@@ -69,10 +78,8 @@
         </div>
 
         <div class="card">
-            <div class="card_image">
-                <img src="../images/l1.png" alt="" class="card_images">
-            </div>
-            <div class="body">
+            <img src="../images/l5.png" alt="" class="card_images">
+            <div class="card_body">
                 <h3 class="card_title">
                     Caderno de folha lisa.
                 </h3>
@@ -83,10 +90,8 @@
         </div>
 
         <div class="card">
-            <div class="card_image">
-                <img src="../images/l5.png" alt="" class="card_images">
-            </div>
-            <div class="body">
+            <img src="../images/l3.png" alt="" class="card_images">
+            <div class="card_body">
                 <h3 class="card_title">
                     Caderno de folha lisa.
                 </h3>
@@ -97,10 +102,8 @@
         </div>
 
         <div class="card">
-            <div class="card_image">
-                <img src="../images/l3.png" alt="" class="card_images">
-            </div>
-            <div class="body">
+            <img src="../images/l2.png" alt="" class="card_images">
+            <div class="card_body">
                 <h3 class="card_title">
                     Caderno de folha lisa.
                 </h3>
@@ -111,24 +114,8 @@
         </div>
 
         <div class="card">
-            <div class="card_image">
-                <img src="../images/l2.png" alt="" class="card_images">
-            </div>
-            <div class="body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="card_image">
-                <img src="../images/l6.png" alt="" class="card_images">
-            </div>
-            <div class="body">
+            <img src="../images/l6.png" alt="" class="card_images">
+            <div class="card_body">
                 <h3 class="card_title">
                     Caderno de folha lisa.
                 </h3>
