--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -22,8 +22,8 @@
     </header>
 
     <article class="aboutme_article">
-        <div class= ph_aboutme>
-            <img src="../images/sobremimpic.png" alt="Fotografia de Raiza" class="aboutme_foto">
+        <div class= aboutme_framepic>
+            <img src="../images/sobremimpic.png" alt="Fotografia de Raiza" class="aboutme_pic">
         </div>
 
         <div>
