--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -33,7 +33,7 @@
             </div>
             <div class="card_body_sola">
                 <h3 class="card_title">Sol a Pino</h3>
-                <p class="card_description">Quero um.</p>
+                <a href="#" class="addlink">Quero um.</a>
                 <!-- tiene que ser un click  -->
             </div>
         </section>
@@ -50,6 +50,7 @@
                 <p class="card_description">
                     Livro capa dura.
                 </p>
+                <a href="#" class="addllink">Quero um.</a>
             </div>
         </div>
 
@@ -62,6 +63,7 @@
                 <p class="card_description">
                     Livro capa dura.
                 </p>
+                <a href="#" class="addllink">Quero um.</a>
             </div>
         </div>
 
@@ -74,6 +76,7 @@
                 <p class="card_description">
                     Livro capa dura.
                 </p>
+                <a href="#" class="addllink">Quero um.</a>
             </div>
         </div>
 
@@ -86,6 +89,7 @@
                 <p class="card_description">
                     Livro capa dura.
                 </p>
+                <a href="#" class="addllink">Quero um.</a>
             </div>
         </div>
 
@@ -98,6 +102,7 @@
                 <p class="card_description">
                     Livro capa dura.
                 </p>
+                <a href="#" class="addllink">Quero um.</a>
             </div>
         </div>
 
@@ -110,6 +115,7 @@
                 <p class="card_description">
                     Livro capa dura.
                 </p>
+                <a href="#" class="addllink">Quero um.</a>
             </div>
         </div>
 
@@ -122,6 +128,7 @@
                 <p class="card_description">
                     Livro capa dura.
                 </p>
+                <a href="#" class="addllink">Quero um.</a>
             </div>
         </div>
     </main>
