--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -26,12 +26,10 @@
 
     <article class="alvoroca_article">
         <section class="section_solapino">
-            <div class="card_solap">
-                <div class="card_solap_img">
-                    <img src="../images/sola.png"class="card_images" alt="">
-                </div>
+            <div class="card_image">  
+                <img src="../images/sola.png"class="card_images" alt="">
             </div>
-            <div class="card_body_sola">
+            <div class="card_text">
                 <h3 class="card_title">Sol a Pino</h3>
                 <a href="#" class="addlink">Quero um.</a>
                 <!-- tiene que ser un click  -->
@@ -40,95 +38,130 @@
     </article>
 
     <main class="alvoroca_main">
-        <div class="card">
-            <!-- card imagine div not necessary, delete -->
-            <img src="../images/l0.png" alt="" class="card_images">
-            <div class="card_body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-                <a href="#" class="addllink">Quero um.</a>
+        <div class="section1">
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l0.png" alt="" class="card_images">
+                </div>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Clarice Lispector
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
+            </div>
+
+            <div class="card">        
+                <div class="card_container">
+                <img src="../images/l4.png" alt="" class="card_images">            
+                </div>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Frida Kahlo
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l1.png" alt="" class="card_images">
+                </div>
+                
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Caderno de folha lisa.
+                    </h3>
+                    <p class="card_details">
+                        Livro capa dura.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
             </div>
         </div>
 
-        <div class="card">        
-            <img src="../images/l4.png" alt="" class="card_images">            
-            <div class="card_body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-                <a href="#" class="addllink">Quero um.</a>
+        <div class="section2">
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l5.png" alt="" class="card_images">
+                </div>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Caderno de folha lisa.
+                    </h3>
+                    <p class="card_details">
+                        Livro capa dura.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l3.png" alt="" class="card_images">
+                </div>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Lucrecia Martel
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l2.png" alt="" class="card_images">
+                </div>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Pagu
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
             </div>
         </div>
-
-        <div class="card">
-            <img src="../images/l1.png" alt="" class="card_images">
-            <div class="card_body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-                <a href="#" class="addllink">Quero um.</a>
+        <div class="section3">
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l6.png" alt="" class="card_images">
+                </div>
+                <img>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Todas nós
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
             </div>
-        </div>
-
-        <div class="card">
-            <img src="../images/l5.png" alt="" class="card_images">
-            <div class="card_body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-                <a href="#" class="addllink">Quero um.</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="../images/l3.png" alt="" class="card_images">
-            <div class="card_body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-                <a href="#" class="addllink">Quero um.</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="../images/l2.png" alt="" class="card_images">
-            <div class="card_body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-                <a href="#" class="addllink">Quero um.</a>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="../images/l6.png" alt="" class="card_images">
-            <div class="card_body">
-                <h3 class="card_title">
-                    Caderno de folha lisa.
-                </h3>
-                <p class="card_description">
-                    Livro capa dura.
-                </p>
-                <a href="#" class="addllink">Quero um.</a>
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l6.png" alt="" class="card_images">
+                </div>
+                <img>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Todas nós
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
             </div>
         </div>
     </main>
@@ -138,10 +171,9 @@
 
     <footer class="footer">
         <div class="footer_text">
-            <a  class="">
+            <a>
                 Kerosene, 2023
             </a>
-    
         </div> 
         <div class="footer_logos">
             <div>
