alvoroca work in progresss hover card8

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -38,7 +38,7 @@
     </article>
 
     <main class="alvoroca_main">
-        <div class="section1">
+        <div class="cards">
             <div class="card">
                 <div class="card_container">
                     <img src="../images/l0.png" alt="" class="card_images">
@@ -83,10 +83,8 @@
                     </p>
                     <a href="#" class="addllink">Quero um.</a>
                 </div>
-            </div>
-        </div>
+            </div>        
 
-        <div class="section2">
             <div class="card">
                 <div class="card_container">
                     <img src="../images/l5.png" alt="" class="card_images">
@@ -131,8 +129,8 @@
                     <a href="#" class="addllink">Quero um.</a>
                 </div>
             </div>
-        </div>
-        <div class="section3">
+        
+        
             <div class="card">
                 <div class="card_container">
                     <img src="../images/l6.png" alt="" class="card_images">
@@ -148,9 +146,9 @@
                     <a href="#" class="addllink">Quero um.</a>
                 </div>
             </div>
-            <div class="card">
+            <div class="card card8">
                 <div class="card_container">
-                    <img src="../images/l6.png" alt="" class="card_images">
+                    <img src="../images/l6.png" alt="" class="card_images card8hover">
                 </div>
                 <img>
                 <div class="card_description">
