work in progress alvoroca, hover did not work image

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -129,6 +129,36 @@
                     <a href="#" class="addllink">Quero um.</a>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l6.png" alt="" class="card_images">
+                </div>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Todas nós.
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_container">
+                    <img src="../images/l2.png" alt="" class="card_images">
+                </div>
+                <div class="card_description">
+                    <h3 class="card_title">
+                        Pagu
+                    </h3>
+                    <p class="card_details">
+                        Caderno capa dura. 60 folhas.
+                    </p>
+                    <a href="#" class="addllink">Quero um.</a>
+                </div>
+            </div>
         
         
             <div class="card">
@@ -148,7 +178,7 @@
             </div>
             <div class="card card8">
                 <div class="card_container">
-                    <img src="../images/l6.png" alt="" class="card_images card8hover">
+                    <img src="../images/l6.png" alt="" class="card_images">
                 </div>
                 <img>
                 <div class="card_description">
