article alvoroca done

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -16,7 +16,7 @@
             <ul class="alvoroca_nav_list">
                 <li><a href="../index.html">Inicio</a></li>            
                 <li><a href="./aboutme.html">Sobre mim</a></li> 
-                <li><a href="./publications.html">Publicações</a></li>
+                <li><a href="./publications.html">Publicacoes</a></li>
                 <li><a href="./poems.html">Poemas</a></li>
                 <li><a>Alvoroça</a></li>
                 <li><a href="./contact.html">Contato</a></li>
