header article ok2

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -18,7 +18,7 @@
                 <li><a href="./aboutme.html">Sobre mim</a></li> 
                 <li><a href="./publications.html">Publicacoes</a></li>
                 <li><a href="./poems.html">Poemas</a></li>
-                <li><a>Alvoroça</a></li>
+                <li><a class="alvoroca_link">Alvoroça</a></li>
                 <li><a href="./contact.html">Contato</a></li>
             </ul>
         </nav>  
