worked on all areas, need to add banner on top

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -47,7 +47,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>  
 
@@ -77,7 +77,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
 
@@ -92,7 +92,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
 
@@ -107,7 +107,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
 
@@ -122,7 +122,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
 
@@ -137,7 +137,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
 
@@ -152,7 +152,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
 
@@ -167,7 +167,7 @@
                 <p class="card_details">
                 Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um.</a>
+                <a href="#" class="addllink">Quero um</a>
             </div>
         </div>
     </main>
@@ -183,10 +183,10 @@
         </div> 
         <div class="footer_logos">
             <div>
-                <a href="#"><img src="../images/fblogo.png" alt="" class="footer_logos_img"></a>
+                <a href="#"><img src="../images/iglogo.png" alt="" class="footer_logos_img"></a>
             </div>
             <div>
-                <a href="https://www.instagram.com/alvoroca/"><img src="../images/iglogo.png" alt="" class="footer_logos_img"></a>
+                <a href="https://www.instagram.com/alvoroca/"><img src="../images/fblogo.png" alt="" class="footer_logos_img"></a>
             </div>
         </div>
     </footer>
