alvoroca mobile WIP

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -24,6 +24,10 @@
         </nav>  
     </header>
 
+    <section class="alvoroca_banner">
+        <img src="../images/banner.png" class="banner_img" alt="">
+    </section>
+
     <article class="alvoroca_article">
         <div class="card_image">  
             <img src="../images/sola.png"class="card_images" alt="">
@@ -171,7 +175,6 @@
             </div>
         </div>
     </main>
-
 
 
 
