--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -178,7 +178,7 @@
 
 
 
-    <footer class="footer">
+    <footer class="footer footer_alvo">
         <div class="footer_text">
             <a>
                 Kerosene, 2023
