Mobile Alvoroca, ok

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -34,7 +34,7 @@
         </div>
         <div class="card_text">
             <h3 class="card_title">Sol a Pino</h3>
-            <a href="#" class="addlink">Quero um.</a>
+            <a href="#" class="addlink">Quero um</a>
             <!-- tiene que ser un click  -->
         </div>
     </article>
@@ -187,7 +187,7 @@
                 <a href="#"><img src="../images/iglogo.png" alt="" class="footer_logos_img"></a>
             </div>
             <div>
-                <a href="https://www.instagram.com/alvoroca/"><img src="../images/fblogo.png" alt="" class="footer_logos_img"></a>
+                <a href="https://www.instagram.com/alvoroca/"><img src="../images/fb.png" alt="" class="footer_logos_img"></a>
             </div>
         </div>
     </footer>
