Desktop, Alvoroca. Ok. Missin Tablet. Next; hover on piccies

--- a/pages/alvoroca.html
+++ b/pages/alvoroca.html
@@ -19,7 +19,7 @@
                 <li><a href="./aboutme.html">Sobre mim</a></li> 
                 <li><a href="./publications.html">Publicacoes</a></li>
                 <li><a href="./poems.html">Poemas</a></li>
-                <li><a class="alvoroca_link">Alvoroça</a></li>
+                <li><a id="alvoroca_link">Alvoroça</a></li>
                 <li><a href="./contact.html">Contato</a></li>
             </ul>
         </nav>  
@@ -51,7 +51,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
 
@@ -66,13 +66,13 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>  
 
         <div class="card">
             <div class="card_container">
-                <img src="../images/l5.png" alt="" class="card_images">
+                <img src="../images/l1.png" alt="" class="card_images">
             </div>
             <div class="card_description">
                 <h3 class="card_title">
@@ -81,7 +81,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
 
@@ -96,7 +96,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
 
@@ -111,7 +111,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
 
@@ -121,12 +121,12 @@
             </div>
             <div class="card_description">
                 <h3 class="card_title">
-                    Todas nós.
+                    Todas nós
                 </h3>
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
 
@@ -141,7 +141,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
 
@@ -156,7 +156,7 @@
                 <p class="card_details">
                     Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
 
@@ -171,7 +171,7 @@
                 <p class="card_details">
                 Caderno capa dura. 60 folhas.
                 </p>
-                <a href="#" class="addllink">Quero um</a>
+                <a href="#" id="addlink">Quero um</a>
             </div>
         </div>
     </main>
