--- a/index.html
+++ b/index.html
@@ -2,61 +2,114 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <!--Fonts-->
-    <title>Raíza Hanna Milfont</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <script src="js/purchase.js"></script>
+    <script src="js/index.js"></script>
+    <title>Pre-Entrega 2</title>
 </head>
-<body class="index_container">
+<body>
     <header class="header">
-        <nav class="navbar">
-            <ul>
-                <li><a>Inicio</a></li>  <!--   Pode nao ter -->
-                <li><a href="./pages/aboutme.html">Sobre mim</a></li>
-                <li><a href="./pages/publications.html">Publicações</a></li>                                
-                <li><a href="./pages/poems.html">Poemas</a></li>
-                <li><a href="./pages/alvoroca.html">Alvoroça</a></li>
-                <li><a href="./pages/contact.html">Contato</a></li>
-            </ul>
-        </nav>                
-        
+        Pagina de Productos
     </header>
-
-<!--Comentario-->
-
-    <article class="index_article">
-        <div class="index_texto">
-            <P>Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Quo omnis quam voluptatum 
-                inventore nostrum odio molestiae tempore aliquam 
-                architecto. Ipsa eum id adipisci recusandae, 
-                magni quaerat ex est aliquam sint?
-                Lorem ipsum dolor sit amet consectetur 
-                adipisicing elit. Quo omnis quam voluptatum 
-                inventore nostrum odio molestiae tempore aliquam 
-                architecto. Ipsa eum id adipisci recusandae, 
-                magni quaerat ex est aliquam sint</P>
+    <aside class="aside">
+        <p>
+            Para hacer una compra 👆 f12 y escriba en consola "purchase()"
+        </p>
+    </aside>
+    <main class="main">
+        <div class="card">
+            <div class="card_container">
+                <img src="images/libroI.jpeg" alt="" class="card_images">
+            </div>
+            <div class="card_description">
+                <h3 class="card_title">
+                    Carnivorous Plants
+                </h3>
+                <p class="card_details">
+                    Codigo   1
+                </p>
+                <a href="#" id="addlink">Ver detalle</a>
+            </div>
         </div>
-    </article>
+        <div class="card">
+            <div class="card_container">
+                <img src="images/libroII.jpeg" alt="" class="card_images">
+            </div>
+            <div class="card_description">
+                <h3 class="card_title">
+                    Botanicum Postcards
+                </h3>
+                <p class="card_details">
+                    Codigo  2
+                </p>
+                <a href="#" id="addlink">Ver detalle</a>
+            </div>
+        </div>
 
+        <div class="card">
+            <div class="card_container">
+                <img src="images/plantI.webp" alt="" class="card_images">
+            </div>
+            <div class="card_description">
+                <h3 class="card_title">
+                    Carnivorous plant I
+                </h3>
+                <p class="card_details">
+                    Codigo 3
+                </p>
+                <a href="#" id="addlink">Ver detalle</a>
+            </div>
+        </div>
 
+        <div class="card">
+            <div class="card_container">
+                <img src="images/plantII.webp" alt="" class="card_images">
+            </div>
+            <div class="card_description">
+                <h3 class="card_title">
+                    Carnivorous plant II
+                </h3>
+                <p class="card_details">
+                    Codigo 4
+                </p>
+                <a href="#" id="addlink">Ver detalle</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_container">
+                <img src="images/potI.jpeg" alt="" class="card_images">
+            </div>
+            <div class="card_description">
+                <h3 class="card_title">
+                    Maceta hecha de plantas
+                </h3>
+                <p class="card_details">
+                    Codigo 5
+                </p>
+                <a href="#" id="addlink">Ver detalle</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_img_container">
+                <img src="images/potII.webp" alt="" class="card_images">
+            </div>
+            <div class="card_description">
+                <h3 class="card_title">
+                    Maceta
+                </h3>
+                <p class="card_details">
+                    Codigo 6
+                </p>
+                <a href="#" id="addlink">Ver detalle</a>
+            </div>
+        </div>
+
+    </main>
     <footer class="footer">
-        <div class="footer_text">
-            <a  class="">
-                Kerosene, 2023
-            </a>
-        </div> 
-        
-        <div class="footer_logos">
-            <div>
-                <a href="#"><img src="./images/fblogo.png" alt="" class="footer_logos_img"></a>
-            </div>
-            <div>
-                <a href="https://www.instagram.com/alvoroca/"><img src="./images/iglogo.png" alt="" class="footer_logos_img"></a>
-            </div>
-        </div>
-
-    </footer>
+        Gracias por visitarnos.
+    </footer>    
 </body>
 </html>
